# UE5-SDK

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs  offsets_replacer.rs
src/SDK/: AActor.rs  ABaseFuelBurner_C.rs  ABasePlayerController.rs  ABasePrimalWorldSettings.rs  ACharacter.rs  AController.rs  ADroppedItem.rs  AExplorerChest_Base_C.rs  AGameState.rs  AGameStateBase.rs  AHUD.rs  AInfo.rs  APawn.rs  APlayerCameraManager.rs  APlayerController.rs  APlayerControllerBlueprint_C.rs  APlayerState.rs  APrimalCharacter.rs  APrimalController.rs  APrimalDinoCharacter.rs  APrimalPawn.rs  APrimalPlayerController.rs  APrimalStructure.rs  APrimalStructureItemContainer.rs  APrimalStructureItemContainer_SupplyCrate.rs  APrimalStructureSeating.rs  APrimalStructureTurret.rs  APrimalTargetableActor.rs  AShooterCharacter.rs  AShooterGameState.rs  AShooterHUD.rs  AShooterPlayerController.rs  AShooterPlayerState.rs  AShooterProjectile.rs  AShooterWeapon.rs  AStandingMountedTurret.rs  AStructureBase_PowerGenerator_C.rs  AStructureItemContainerBaseBP_C.rs  AStructureTurretBaseBP_BaseHeavy_C.rs  AStructureTurretBaseBP_C.rs  (+74 more)
src/SDK/Structs/: FColor.rs  FKey.rs  FLinearColor.rs  FName.rs  FQuat.rs  FRotator.rs  FString.rs  FTransform.rs  FUObjectItem.rs  FVector.rs  FVector2D.rs  TArray.rs  TSubclassOf.rs  TUObjectArray.rs  TWeakObjectPtr.rs  mod.rs
